# influxdb-temp-server

./: .gitignore  Cargo.toml  README.md  temperature-server.service
src/: client.rs  main.rs
static/: buildchart.js  co2_level_mapping.js  index.html  style.css
