[package]
name = "temp_from_influxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros" ] }
clap = { version = "4", features = ["derive", "env"] }

serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
duration-string = "0.3"

axum = { version = "0.6", features = [ "headers" ] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2", features = [ "add-extension", "fs", "compression-br", "compression-gzip", "compression-deflate" ] }

influxdb2 = { version = "0.4", default-features = false }
influxdb2-structmap = "0.2"
chrono = "0.4"
num-traits = "0.2"

futures-util = "0.3"

[profile.release]
debug = true